--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,13 @@
 name: $(Date:yyyyMMdd)-$(Hours)-$(Minutes)
 
+resources:
+  repositories:
+  - repository: github
+    type: github
+    name: pallxk/document-installed-item
+    ref: version.sh
+    endpoint: pallxk
+
 trigger:
 - master
 
@@ -11,20 +19,21 @@ schedules:
     - master
   always: true  # Run even if no source code changes
 
-stages:
-- stage: generate_commit_and_test
-  displayName: Generate, Commit, and Test
-  jobs:
-  - job: generate_commit_and_test
-    displayName: Generate, Commit, and Test
-    pool:
-      vmImage: ubuntu-18.04
-    steps:
-    - checkout: self
-      persistCredentials: true
+jobs:
+- job: run_ubuntu_1604
+  pool:
+    vmImage: ubuntu-16.04
+  steps:
+  - checkout: github
 
-    - bash: $(Build.SourcesDirectory)/generate-and-commit
-      displayName: 'Bash: ./generate-and-commit'
+  - bash: $(Build.SourcesDirectory)/version.sh
+    displayName: 'Bash: ./version.sh'
 
-    - bash: $(Build.SourcesDirectory)/version.sh
-      displayName: 'Bash: ./version.sh'
+- job: run_ubuntu_1804
+  pool:
+    vmImage: ubuntu-18.04
+  steps:
+  - checkout: github
+
+  - bash: $(Build.SourcesDirectory)/version.sh
+    displayName: 'Bash: ./version.sh'
